<resources>
    <string name="app_name">AvesDeliverApp</string>

    <string-array name="drawer_items">
        <item >TRIP START</item>
        <item >DELIVERY DETAILS</item>
        <item >TRIP END</item>
        <item >SYNC</item>
        <item >VIEW</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="aves">AVES</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="copyright">Copyright Excel Infotech Solutions Pvt. Ltd.</string>

    <string name="trip_start">TRIP START</string>
    <string name="save">SAVE</string>
    <string name="trip_opening_km">Trip Opening KM :</string>
    <string name="route_name">Route Name :</string>
    <string name="vehicle_no">Vehicle No.:</string>
    <string name="trip_start_date">Trip Start Date :</string>
    <string name="trip_start_time">Trip Start Time :</string>
    <string name="supervisor_name">Supervisor Name :</string>

    <string name="trip_end">TRIP END</string>
    <string name="trip_closing_km">Trip Closing KM :</string>
    <string name="trip_end_date">Trip End Date :</string>
    <string name="trip_end_time">Trip End Time :</string>

    <string name="delivery_details">DELIVERY DETAILS</string>
    <string name="completed_deliveries">COMPLETED DELIVERIES</string>
    <string name="orders_today">Orders Today</string>
    <string name="copyright_excel">Excel Infotech Solutions Pvt. Ltd.</string>

    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_in_time">Delivery in Time</string>
    <string name="delivery_out_time">Delivery out Time</string>
</resources>
