<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_red">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_icon"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_start"
                android:textSize="30dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.8">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.45">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/ten_dp"
                android:background="@android:color/white"
                android:layout_weight="0.5">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:orientation="vertical"
                android:layout_weight="0.5">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orders_today"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/today_date"
                        android:text="10/10/2016"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:textColor="@android:color/black"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/dotted_line">
                </View>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/order_list"></ListView>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-30dp"
            android:layout_marginBottom="-30dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@drawable/ticket_white"
            android:layout_weight="0.55">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_indicator"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/copyright_white"
                android:layout_toLeftOf="@+id/copyright"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright_excel"
                android:id="@+id/copyright"
                android:textSize="20dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>